Spark 4.0 and Java 17 (#676)
Co-authored-by: anniezc <anniezc@amazon.com>